deploy/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <ENV>
  name: <APP>-<ENV>
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: <APP>-<ENV>
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: <APP>-<ENV>
      annotations:
        date: "<DATE>"
    spec:
      terminationGracePeriodSeconds: 50
      containers:
        - image: <AWS_ACCOUNT_ID>.dkr.ecr.cn-northwest-1.amazonaws.com.cn/<APP>:<ENV>
          imagePullPolicy: Always
          name: <APP>
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 40"]
          ports:
          - containerPort: 1325
---
apiVersion: v1
kind: Service
metadata:
  namespace: <ENV>
  name: <APP>-<ENV>
  annotations:
    date: "<DATE>"
spec:
  ports:
    - port: 1325
      targetPort: 1325
      protocol: TCP
  selector:
    app.kubernetes.io/name: <APP>-<ENV>
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <ENV>
  name: <APP>-<ENV>
  annotations:
    alb.ingress.kubernetes.io/group.name: api.<ENV>
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    date: "<DATE>"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - <DOMAIN_PREFIX>api.example.cn
  rules:
    - http:
        paths:
          - path: /prefix-<APP>
            pathType: Prefix
            backend:
              service:
                name: <APP>-<ENV>
                port: 
                  number: 1325
